[package]
name = "ecosystem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
axum = { version = "0.7.7", features = ["http2", "query", "tracing", "multipart"] }
base64 = "0.22.1"
blake3 = "1.5.4"
bytes = "1.8.0"
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4.38", features = ["serde"] }
derive_builder = "0.20.2"
derive_more = { version = "1.0.0", features = ["full"] }
http = "1.1.0"
opentelemetry = "0.26.0"
opentelemetry-otlp = { version = "0.26.0", features = ["tonic"] }
opentelemetry_sdk = { version = "0.26.0", features = ["rt-tokio"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
serde_with = "3.11.0"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.1"
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros", "net", "fs"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-opentelemetry = "0.27.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
